Fix upload image styles, images too big went outside the box

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -24,6 +24,10 @@ a.btn:visited {
 }
 
 .drop_zone {
+  height: auto;
+}
+.drop_zone span {
+  display: block;
   height: 200px;
 }
 
